[gd_scene load_steps=6 format=3 uid="uid://xjf514n0gujb"]

[ext_resource type="PackedScene" uid="uid://cwwp6l365mm0f" path="res://ui/menus/base_menu.tscn" id="1_7dtce"]
[ext_resource type="Script" path="res://ui/menus/modification_menus/hanger_menu.gd" id="2_3ppgg"]
[ext_resource type="PackedScene" uid="uid://dn1lffykcmbgp" path="res://drone_core/drone_mirror.tscn" id="3_6uwb2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvqda"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6mm5d"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HangerMenu" instance=ExtResource("1_7dtce")]
anchors_preset = -1
anchor_right = 0.5
offset_right = -208.0
script = ExtResource("2_3ppgg")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Hanger"
horizontal_alignment = 1

[node name="CurrentDrone" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CurrentDrone" index="0"]
layout_mode = 2

[node name="FocusDroneIcon" parent="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer2" index="0" instance=ExtResource("3_6uwb2")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
focus_mode = 0

[node name="Navigation" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer2" index="1"]
layout_mode = 2

[node name="PreviousDrone" type="Button" parent="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer2/Navigation" index="0"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "<"
metadata/_edit_use_anchors_ = true

[node name="NextDrone" type="Button" parent="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer2/Navigation" index="1"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = ">"
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CurrentDrone" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="DroneName" type="LineEdit" parent="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
text = "Drone Name"
max_length = 20
clear_button_enabled = true
metadata/_edit_use_anchors_ = true

[node name="DroneColorLabel" type="Label" parent="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
text = "Drone Color"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxFlat_fvqda")

[node name="DroneStats" type="Label" parent="MarginContainer/VBoxContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Drone Stats"
metadata/_edit_use_anchors_ = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" index="4"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxFlat_6mm5d")

[node name="AddedUpgrades" type="GridContainer" parent="MarginContainer/VBoxContainer" index="5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="ControlBtns" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="6"]
layout_mode = 2

[node name="AssembleBtn" type="Button" parent="MarginContainer/VBoxContainer/ControlBtns" index="0"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
text = "Assemble"

[node name="ClearBtn" type="Button" parent="MarginContainer/VBoxContainer/ControlBtns" index="1"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
text = "Clear"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer2/FocusDroneIcon" to="." method="_on_focus_drone_icon_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer2/Navigation/PreviousDrone" to="." method="_on_previous_drone_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer2/Navigation/NextDrone" to="." method="_on_next_drone_pressed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/CurrentDrone/VBoxContainer/DroneName" to="." method="_on_drone_name_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlBtns/AssembleBtn" to="." method="_on_assemble_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlBtns/ClearBtn" to="." method="_on_clear_btn_pressed"]
